Fixed images not displaying in the unlock panel. (#137)
* Fixed images not showing in unlock panel.

* updated changelog

* Updated naming

* Fixes.

* Fixed error on JSX type.

--- a/src/components/functional/wallet-connect/components/wallet-connect-scan/wallet-connect-scan.scss
+++ b/src/components/functional/wallet-connect/components/wallet-connect-scan/wallet-connect-scan.scss
@@ -79,7 +79,7 @@
       }
 
       .wallet-connect-scan-download-image {
-        @apply mvx:absolute mvx:right-0 mvx:bottom-0;
+        @apply mvx:absolute mvx:right-0 mvx:bottom-0 mvx:max-h-50;
       }
     }
   }
